@startuml Bridge
skinparam classAttributeIconSize 0
title Bridge — Simpler example (C#)

interface IColor {
  + ApplyColor() : string
}

class RedColor {
  + ApplyColor() : string
}

class BlueColor {
  + ApplyColor() : string
}

abstract class Shape {
  # Color : IColor
  # Shape(color : IColor)
  + {abstract} Draw() : void
}

class Circle {
  + Circle(color : IColor)
  + Draw() : void
}

class Square {
  + Square(color : IColor)
  + Draw() : void
}

class SolutionDemo {
  + Run() : void
}

IColor <|.. RedColor
IColor <|.. BlueColor
Shape <|-- Circle
Shape <|-- Square
Shape o--> IColor : Color (bridge)
SolutionDemo ..> Shape

note right of Shape : Abstraction
note bottom of Circle : RefinedAbstraction
note bottom of Square : RefinedAbstraction
note right of IColor : Implementor
note left of RedColor : ConcreteImplementor
note left of BlueColor : ConcreteImplementor
note bottom of SolutionDemo : Client

@enduml
